--- a/catalog.html
+++ b/catalog.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Каталог— Дизайн-студия Nerds</title>
+    <title>Каталог —Дизайн-студия Nerds</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -42,13 +42,13 @@
             <h2 class="visually-hidden">Фильтр товаров</h2>
             <form class="filter" method="get" action="https://echo.htmlacademy.ru">
                 <fieldset>
-                    <legend class="headline">cтоимость:</legend>
+                    <legend class="filter-headline">cтоимость:</legend>
                     <input type="range">
                     <label class="range-word">от<input type="text" value="0"></label>
                     <label class="range-word">до<input type="text" value="0"></label>
                 </fieldset>
                 <fieldset>
-                    <legend class="headline">сетка:</legend>
+                    <legend class="filter-headline">сетка:</legend>
                     <ul>
                         <li class="filter-option">
                             <input class="visally-hidden filter-input filter-input-radio" id="adaptive-type" type="radio" name="grid-type" value="adaptive"  checked>
@@ -65,7 +65,7 @@
                     </ul>
                 </fieldset>
                 <fieldset>
-                    <legend class="headline">особенности:</legend>
+                    <legend class="filter-headline">особенности:</legend>
                     <ul>
                         <li class="features">
                             <input class="visually-hidden filter-input filter-input-checkbox" id="feature-slider" type="checkbox" name="feature-item" value="slider" checked>
@@ -114,14 +114,14 @@
                     <li>
                         <input type="radio" id="sort-by-descending" name="sort-priority" value="by-descending" checked>
                         <label for="sort-by-descending">
-<!--                            <title class="visually-hidden">сортировать по убыванию</title>-->
+<!--                            <title class="visually-hidden">сортировать по убыванию</title>
                             <img src="img/icon-down-dir.svg" width="11" height="10" alt="сортировка по убыванию">
                         </label>
                     </li>
                     <li>
                         <input type="radio" id="sort-by-ascending" name="sort-priority" value="by-ascending">
                         <label for="sort-by-ascending">
-                            <title class="visually-hidden">сортировать по возрастанию</title>
+                            <title class="visually-hidden">сортировать по возрастанию</title>-->
                             <img src="img/icon-up-dir.svg" width="11" height="10" alt="сортировка по убыванию">
                         </label>
                     </li>
@@ -136,7 +136,7 @@
                     <img src="img/img-sedona.jpg" width="360" height="616" alt="Макет Седона">
                     <div class="catalog-pop-up">
                         <a href="catalog-item-link">
-                            <h3 class="maket-name">Sedona</h3>
+                            <h3 class="template-name">Sedona</h3>
                         </a>
                         <p>Информационный сайт для туристов</p>
                         <a class="button button-red" href="#">9900руб.</a>
@@ -146,7 +146,7 @@
                     <img src="img/img-pink.jpg" width="360" height="616" alt="Макет Пинк">
                     <div class="catalog-pop-up">
                         <a href="catalog-item-link">
-                            <h3 class="maket-name">Pink app</h3>
+                            <h3 class="template-name">Pink app</h3>
                         </a>
                         <p>Продуктовый лендинг приложения для iOS и Android</p>
                         <a class="button button-red" href="#">9900руб.</a>
@@ -156,7 +156,7 @@
                     <img src="img/img-barbershop.jpg" width="360" height="616" alt="Макет Бородинский">
                     <div class="catalog-pop-up">
                         <a href="catalog-item-link">
-                            <h3 class="maket-name">Barbershop</h3>
+                            <h3 class="template-name">Barbershop</h3>
                         </a>
                         <p>Сайт салоны красоты. Для мужчин, да.</p>
                         <a class="button button-red" href="#">9900руб.</a>
@@ -166,7 +166,7 @@
                     <img src="img/img-mishka.jpg" width="360" height="616" alt="Макет Мишка">
                     <div class="catalog-pop-up">
                         <a href="catalog-item-link">
-                            <h3 class="maket-name">Mishka</h3>
+                            <h3 class="template-name">Mishka</h3>
                         </a>
                         <p>Интернет-магазин вязаных игрушек</p>
                         <a class="button button-red" href="#">9900руб.</a>
@@ -176,7 +176,7 @@
                     <img src="img/img-aplus.jpg" width="360" height="616" alt="Макет A plus">
                     <div class="catalog-pop-up">
                         <a href="catalog-item-link">
-                            <h3 class="maket-name">A plus</h3>
+                            <h3 class="template-name">A plus</h3>
                         </a>
                         <p>Лендинг курсов повышения квалификации</p>
                         <a class="button button-red" href="#">9900руб.</a>
@@ -186,7 +186,7 @@
                     <img src="img/img-kvast.jpg" width="360" height="616" alt="Макет Кваст">
                     <div class="catalog-pop-up">
                         <a href="catalog-item-link">
-                            <h3 class="maket-name">Кваст</h3>
+                            <h3 class="template-name">Кваст</h3>
                         </a>
                         <p>Промо-сайт производителя крафтового кваса</p>
                         <a class="button button-red" href="#">9900руб.</a>
@@ -207,14 +207,20 @@
             <h3 class="visually-hidden">Адрес</h3>
             <p class="studio-name">NЁRDS DESIGN STUDIO</p>
             <address>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
-            <a href="tel:+78122757575">тел. +7 (812) 275-75-75</a>
-            <a class="button" href="">напишите нам</a> 
+            <a class="phone" href="tel:+78122757575">тел. +7 (812) 275-75-75</a>
+            <a class="button button-red" href="">напишите нам</a> 
         </section>
         <div class="footer-social">
             <ul>
-                <li class="social-button"><a href="#">В контакте</a></li>
-                <li class="social-button"><a href="#">Фейсбук</a></li>
-                <li class="social-button"><a href="#">Инстаграм</a></li>
+                <li class="social-button">
+                    <a href="#">В контакте</a>
+                </li>
+                <li class="social-button">
+                    <a href="#">Фейсбук</a>
+                </li>
+                <li class="social-button">
+                    <a href="#">Инстаграм</a>
+                </li>
             </ul>
             <p class="slogan">Давайте дружить, это выгодно!</p>
             <p>Скидка 10% для друзей из социальных сетей</p>     
