--- a/index.html
+++ b/index.html
@@ -51,17 +51,17 @@
                   </div>
                   <div class="slider-inner">
                       <div class="slider-slides">
-                          <div class="slider-item">
+                          <div class="slider-item-1">
                               <p class="slider-text">Долго, дорого,<br> скрупулезно.</p>
                               <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
                               <a class=" button button-red" href="#">Узнать больше</a>
                           </div>
-                          <div class="slider-item">
+                          <div class="slider-item-2">
                               <p class="slider-text">Любим математику<br> как никто другой</p>
                               <p>Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
                               <a class="button button button-red" href="#">Узнать больше</a>
                           </div>
-                          <div class="slider-item">
+                          <div class="slider-item-3">
                               <p class="slider-text">Только ночь,<br>только хардкор</p>
                               <p>Работать днем, как все? Мы против этого.Ближе к полуночи работа только начинается.</p>
                               <a class="button button-red" href="#">Узнать больше</a>
@@ -159,14 +159,20 @@
           <section class="address">
               <h3 class="visually-hidden">Адрес</h3>
               <p class="studio-name">NЁRDS DESIGN STUDIO</p><address>191186, Санкт-Петербург,ул. Б. Конюшенная, д. 19/8</address>
-              <a href="tel:+78122757575">тел. +7 (812) 275-75-75</a>
+              <a class="phone" href="tel:+78122757575">тел. +7 (812) 275-75-75</a>
               <a class="button button-red" href="#">напишите нам</a> 
           </section>
           <div class="footer-social">
               <ul>
-                  <li class="social-button"><a href="#">В контакте</a></li>
-                  <li class="social-button"><a href="#">Фейсбук</a></li>
-                  <li class="social-button"><a href="#">Инстаграм</a></li>
+                  <li class="social-button">
+                      <a href="#">В контакте</a>
+                  </li>
+                  <li class="social-button">
+                      <a href="#">Фейсбук</a>
+                  </li>
+                  <li class="social-button">
+                      <a href="#">Инстаграм</a>
+                  </li>
               </ul>
               <p class="slogan">Давайте дружить, это выгодно!</p>
               <p>Скидка 10% для друзей из социальных сетей</p>   
